# largemelon

./: .gitignore  CMakeLists.txt  README.md  largemelon.hpp  mtext_loc_example_1.dot
.github/workflows/: cmake-multi-platform.yml
cmake/: FindLemonParse.cmake  FindLemonParser.cmake  FindRagel.cmake
doc/: mtext_loc.md  span_loc.md
test/: test_largemelon.cpp
